# gdgaihack-2026

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CORPUS.md  Cut the Cord — MSI Track · GDG AI HACK 2026.html  PLAN.md  README.md  TECHNICAL_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: README.md  settings.json
.claudeflow/: teamkit.json
.github/: copilot-instructions.md
backend/: chunking.py  config.py  indexer.py  main.py  mlx_client.py  models.py  ollama_client.py  parsing.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  store.py
benchmarks/: README.md
doc/: HANDOFF_FRANCESCO_PELUSO.md  JURY_QA_TRUTHFUL.md  PRESENTATION_SCRIPT.md  ROVER_TEAM_HANDOFF.md  SLIDES_KEYWORDS_WHATSAPP.txt  SLIDES_OUTLINE.md  SLIDE_TEXT_BENCHMARKS_BONUS.md  SLIDE_TEXT_EDGEXPERT_PROJECTION.md  SLIDE_TEXT_FILE_MANAGER_PROBLEM.md  SLIDE_TEXT_HACKATHON_PHASES.md  SLIDE_TEXT_MULTIAGENT.md  SUBMISSION.md  SUBMISSION_FORM.md  TECHNICAL_WRITEUP.md  TECHNICAL_WRITEUP.tex  VIDEO_SCRIPT_90s.md
explainit/: README.md  hackathon.md  macbook-m3-pro.md  startup.md
mars-corpus/: .gitignore
notes/: README.md  decisions.md  team-updates.md
pipelines/: video-prompt-gemini.md
presentation/: 01-le-5-candidate.md  02-mio-voto.md  03-pitch-notes.md  README.md
scripts/: README.md  airplane-check.sh  build-writeup-pdf.sh  cflow.mjs  demo-reset.sh  dev.sh  doctor.sh  download-datasets.sh  download-mars-corpus.sh  download-models.sh  generate-synthetic-leak-docs.py  netproof.sh  setup-voice.sh  setup.sh  warmstart.sh
src/: App.tsx  api.ts  index.css  main.tsx  tauri.ts  (+1 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
(+229 files in other folders)
