[package]
name = "rover"
version = "0.1.0"
description = "Offline AI Finder alternative"
edition = "2021"

[lib]
name = "rover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "sync"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
